# genera

./: .cljp-repl-bootstrap.php  .gitignore  .gitmodules  README.md  composer.json  deps.edn  run
config/: phpbench.json  pint.json  psalm.xml
docs/: 2025-12-25-value-propositions.txt  2025-12-26-docsslime-dx-visionmd.txt  2025-12-27-docscompiler-architecturemd-in-light-of-docss.txt  2025-12-27-docsunified-visionmd.txt  2025-12-30-docscompiler-architecturemd.txt  2026-01-01-caveat-the-messages-below-were-generated-by-the-u.txt  2026-01-05-roadmap.txt  2026-01-14-compilatio.txt  AGENTS.md  HOST_MIGRATION.md  KERNEL.md  NAMESPACES.md  README.md  TESTING.md  architecture_review.md  changelog.md  compiler-architecture.md  compiler_architecture.md  delivery.md  internals.md  parity.md  php-target.md  session.md  slime-dx-vision.md  swoole-integration.md  unified-vision.md
docs/genera/: ALLOCATOR.md  COMPILER.md  GENERA.md  GLASS.md  LANGUAGE.md  PASSES.md  SESSION-NATIVE.md  SYSCALLS.md  VIEW.md  WINDOWS_SYSCALLS.md
resources/: interop.json  interop_utf8_backup.json
script/: benchmark_jit.php  check_brackets.clj  check_meta.clj  clj_utils.clj  copy_phel_to_clojure.php  debug_forms.clj  depgraph.clj  gen_interop.php  gen_parity.clj  hostmap.clj  inspect_json.clj  langmap.clj  php_utils.php  portabilize.clj  portabilize_core.clj  portabilize_core_v2.clj  test_ast_pipeline.clj  test_compiler.php  test_core_parse.php
src/c/genera/: MANIFEST.md  genera.c  moss.c
src/clj-php-cmp/: ErrorHandler.php  Runtime.php
src/clj-php-cmp/Compiler/: Emitter.php
src/clj-php-rt/: Core.php
src/clj-php-rt/Lang/: AbstractFn.php  AbstractType.php  ArraySeq.php  ConcatInterface.php  Cons.php  EmptySeq.php  EqualizerInterface.php  ExceptionInfo.php  HashableInterface.php  Hasher.php  IExceptionInfoInterface.php  IFn.php  IdenticalInterface.php  LazySeq.php  MultiFn.php  Munge.php  Printer.php  PushInterface.php  RemoveInterface.php  RestInterface.php  SeqInterface.php  Seqable.php  SourceLocation.php  SourceLocationInterface.php  Symbol.php  TypeInterface.php  Variable.php
src/clj/clojure/: README.md  async.cljc  bench.cljc  browse.cljc  concurrent.cljc  core.cljc  core_new.cljc  core_portable.cljc  core_portable_generated.cljc  core_portable_v2.cljc  csv.cljc  data.cljc  datafy.cljc  doc.cljc  edn.cljc  host.cljc  http.cljc  io.cljc  json.cljc  main.cljc  math.cljc  parity.cljc  pcore.cljc  pprint.cljc  process.cljc  protocols.cljc  regex.cljc  repl.cljc  set.cljc  shell.cljc  sql.cljc  stacktrace.cljc  stream.cljc  string.cljc  system.cljc  test.cljc  time.cljc  types.cljc  uri.cljc  uuid.cljc  (+3 more)
src/clj/genera/: genera.clj  shim.clj
src/cljp/: emit.cljc  lower_php.cljc  main.clj  mir.cljc
src/clojure/: core.cljc
src/clojure/php/: emit.cljc
src/jvm/clojure/: main.java
src/php/Cljp/: ErrorHandler.php
src/php/clojure/: Async.php  Atom.php  Core.php  Ex.php  Kw.php  Map.php  Meta.php  Multi.php  Ns.php  PList.php  Printer.php  Protocol.php  Queue.php  RT.php  Reader.php  (+13 more)
src/rs/ext-cljp/: Cargo.toml
src/rs/genera/: ARCHITECTURE.md  Cargo.toml  README.md
tests/: arithmetic_test.clj  ast_test.cljc  compiler.clj  core_test.clj  macros.clj  parity_suite.cljc  parity_suite.php  specs.cljc  varargs.clj
tests/.xdebug/: parity_suite.php.json
tests/benchmarks/: CollectionBench.php  RustVsPhpBench.php  dispatch_bench.php  emit_modes_bench.php  magic_optimize_bench.php  object_dispatch_bench.php  psalm_test.php  runtime_bench.php  transient_bench.php  var_dispatch.php
tests/scratch/: parity_results_jvm.edn  parity_test.php  test.cljc  test_analyze.clj  test_aot.clj  test_aot_full.clj  test_complex.cljc  test_core.clj  test_core.cljc  test_core_new.clj  test_core_new_partial.cljc  test_core_portable.clj  test_core_portable_v2.clj  test_crash.cljc  test_cross_ns.cljc  test_debug.cljc  test_defn_lt.cljc  test_defn_lt.php  test_deftype.cljc  test_destruct.cljc  test_emit_meta.cljc  test_exinfo.cljc  test_exinfo_display.cljc  test_full.cljc  test_full_output.clj  test_functional.cljc  test_hello.php  test_iife.cljc  test_iife.php  test_iife_aot.php  test_iife_minimal.cljc  test_iife_output.php  test_immutability.cljc  test_inline.cljc  test_inline2.cljc  test_inline2.php  test_interop.cljc  test_interop_spec.cljc  test_kernel.cljc  test_keyword_bench.cljc  (+22 more)
tools/emacs-parinfer-defnet/: BRACKET-TYPE-ENHANCEMENT-COMPLETE.md  BRACKET-TYPE-STATUS.md  BRACKET-TYPE-SUCCESS.md  BRACKET-TYPE-TEST-RESULTS.md  CLAUDE-CODE-EMACS-GUIDE.md  CLAUDE-MD-UPDATE-SUMMARY.md  CLAUDE.md  CLOJURE_MCP_BRACKET_DETECTION_ANALYSIS.md  CONTINUATION-SUMMARY.md  DEEP-NESTING-ANALYSIS.md  DEFNET_VS_PARINFER_COMPARATIVE_ANALYSIS.md  DIAGNOSTIC-QUICK-REF.md  EFFICIENT-STRUCTURE-COMPARISON.md  EMACS-DEBUG-METHODS.md  EMACS-DIAGNOSTIC-REPORT.md  FINAL-DIAGNOSTIC-REPORT.md  INDENTATION-ENHANCEMENTS.md  INDENTATION-PAREN-DETECTION.md  LANGUAGE-SPECIFIC-HELPERS.md  LLM-PAREN-DIAGNOSTICS.md  LSP-PARINFER-COMPARISON.md  MCP-GUIDE.md  MCP-QUICKSTART.md  METHOD-COMPARISON.md  PARINFER-VS-OTHERS-LLM-ANALYSIS.md  PLUGIN-UPDATE-COMPLETE.md  PROGRAMMATIC-EMACS.md  PROGRAMMATIC-QUICKSTART.md  README-TESTING.md  SETUP-COMPLETE.md  SKILL-UPDATE-SUMMARY.md  SLIME-SETUP-COMPLETE.md  STRUCTURE-BASED-DIAGNOSTICS.md  TESTING-AND-STRUCTURAL-EDITING.md  THREE-DOCUMENT-SYNTHESIS.md  TOOL-BY-TOOL-ANALYSIS.md  USAGE-EXAMPLE.md  WHERE-TO-LAUNCH-CLAUDE.md  add-clojure-config.ps1  add-eglot-booster-v2.ps1  (+45 more)
tools/system-observatory/: deps.edn  package-lock.json  package.json  shadow-cljs.edn
tools/wsl-monitor/: Program.cs  WslMonitor.csproj
tools/wsl-taskman/: Cargo.toml
tools/wsl-taskman-tauri/: package-lock.json  package.json
tools/wsl-taskman-tauri/src-tauri/: Cargo.toml  tauri.conf.json
tools/wsl-taskman-tauri/src-tauri/src/: lib.rs  main.rs
tools/wsl-taskman-v2/: package-lock.json  package.json  svelte.config.js
tools/wsl-taskman-v2/src-tauri/: Cargo.toml  tauri.conf.json
tools/wsl-taskman-v2/src-tauri/src/: lib.rs  main.rs  mcp.rs
tools/wsl-taskman/src/: main.rs
(+721 files in other folders)
