[package]
name = "wsl_taskman"
version = "0.1.0"
edition = "2021"
description = "WSL Task Manager - Monitor and manage WSL processes from Windows"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_plot = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tray-icon = "0.19"
image = "0.25"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
