[package]
name = "wsl-taskman-tauri"
version = "0.1.0"
description = "WSL Task Manager - Monitor and manage WSL processes"
authors = ["Apollo"]
edition = "2021"

[lib]
name = "wsl_taskman_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["process", "rt"] }
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
] }

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
