[package]
name = "wsl-taskman-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wsl_taskman_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# TODO: MCP server binary - re-enable with rmcp
# [[bin]]
# name = "wsl-taskman-mcp"
# path = "src/bin/mcp_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
hostname = "0.4"
num_cpus = "1.16"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util"] }
raw-cpuid = "11"

# TODO: MCP SDK - rmcp 0.12 has breaking changes from docs, revisit later
# rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
# schemars = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
] }

